# treecies

./: README  catalogue_of_life.py  treecies.cabal
col/: kingdoms.txt  treecies.cabal  web-tol
col/src/: Disp.hs  Main.hs  Rank.hs  Tol.hs  TolWork.hs  Web.hs
hs/: errata  stats  tol.bkup  treecies.cabal  web_tol.hs
hs/src/: OldTol.hs  Rank.hs  SearchInfo.hs  Tol.hs  TolNode.hs  WebTol.hs
proc-col/: treecies.cabal
proc-col/src/: Main.hs  Rank.hs  SearchInfo.hs  Tol.hs  TolNode.hs  TolWork.hs  Web.hs  WebTol.hs
proc-tolweb.org/: prep  proc-tolweb.org.cabal  run
proc-tolweb.org/data/: run-output
proc-tolweb.org/src/: Main.hs
tolweb.org/: proc-tolweb.org  run
tolweb.org/data/: run-output
