name:            treecies
version:         0.1
license:         BSD3
license-file:    LICENSE
author:          dan corson <danl@alum.mit.edu>
synopsis:        <syn>
build-type:      Simple
build-depends:   base

executable:      treecies
main-is:         Main.hs
hs-source-dirs:  src

exposed-modules: treecies
hs-source-dirs:  src
