name:            treecies
version:         0.1
license:         BSD3
license-file:    LICENSE
author:          dan corson <danl@alum.mit.edu>
synopsis:        <syn>
build-type:      Simple
build-depends:
      base
    , bytestring
    , cmdlib
    , containers
    , data-ordlist
    , directory
    , haskeline
    , http-conduit
    , sig-figs
    , transformers
    , xml

executable:      web-tol
main-is:         Main.hs
hs-source-dirs:  src
ghc-options:     -Wall -O3
