name:            treecies
version:         0.1
license:         BSD3
license-file:    LICENSE
author:          dan corson <danl@alum.mit.edu>
synopsis:        <syn>
build-type:      Simple
build-depends:
      base
    , bytestring
    , ghc-prim
    , cereal-derive
    , cereal
    , cmdlib
    , containers
    , directory
    , either-unwrap
    , FUtil
    , HTTP
    , MissingH
    , split
    , xml

executable:      web_tol
main-is:         WebTol.hs
hs-source-dirs:  src
