name:            treecies
version:         0.1
license:         BSD3
license-file:    LICENSE
author:          dan corson <danl@alum.mit.edu>
synopsis:        <syn>
build-type:      Simple
build-depends:
      base
    , bytestring
    , ghc-prim
    , cereal
    , cmdlib
    , containers
    , directory
    , either-unwrap
    , HTTP
    , MissingH
    , split
    , xml

executable:      web_tol
main-is:         Main.hs
hs-source-dirs:  src
ghc-options:     -Wall -O3
